datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum Sender {
  CUSTOMER
  SALESPERSON
}

model Conversation {
  id            Int      @id @default(autoincrement())
  identifier    String   @unique
  customerId    Int
  salespersonId Int
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  customer    Customer    @relation(fields: [customerId], references: [id])
  salesperson Salesperson @relation(fields: [salespersonId], references: [id])
  messages    Message[]
}

model Message {
  id             Int      @id @default(autoincrement())
  content        String
  sender         Sender
  conversationId Int
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  conversation Conversation @relation(fields: [conversationId], references: [id])
}

model Customer {
  id            Int            @id @default(autoincrement())
  name          String
  email         String         @unique
  cpf           String         @unique
  website       String
  phone         String
  role          String
  companyName   String
  companyCnpj   String
  employees     Int
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  conversations Conversation[]
}

model Salesperson {
  id            Int            @id @default(autoincrement())
  name          String
  email         String         @unique
  phone         String
  position      String
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  conversations Conversation[]
}
