//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Conversation {
  id Int [pk, increment]
  identifier String [unique, not null]
  customerId Int [not null]
  salespersonId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  customer Customer [not null]
  salesperson Salesperson [not null]
  messages Message [not null]
}

Table Message {
  id Int [pk, increment]
  content String [not null]
  sender Sender [not null]
  conversationId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  conversation Conversation [not null]
}

Table Customer {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  cpf String [unique, not null]
  website String [not null]
  phone String [not null]
  role String [not null]
  companyName String [not null]
  companyCnpj String [not null]
  employees Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  conversations Conversation [not null]
}

Table Salesperson {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  phone String [not null]
  position String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  conversations Conversation [not null]
}

Enum Sender {
  CUSTOMER
  SALESPERSON
}

Ref: Conversation.customerId > Customer.id

Ref: Conversation.salespersonId > Salesperson.id

Ref: Message.conversationId > Conversation.id